[tool.poetry]
name = "python-bot"
version = "0.1.0"
description = ""
authors = ["school-cyber <slynch23@students.svcs.k12.in.us>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
