[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["school-cyber <slynch23@students.svcs.k12.in.us>"]
description = ""
name = "python-bot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
python = "^3.7"
python-dotenv = "^0.12.0"
[tool.poetry.dev-dependencies]
